fix: Postcard list spacing

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,6 +29,7 @@ $max_width: 42em; // arbitrary. but nice!
     .info {
         width: 100%;
         box-sizing: border-box;
+        padding: 0 2.4em;
 
         display: grid;
         grid-template-columns: auto auto;
